# tts_webui_extension.bark

./: pyproject.toml  run_demo.py  setup.py
extension_bark/: main.py  parse_or_set_seed.py
extension_bark/model_loader/: loader.py
extension_bark/voices/: edit_metadata_ui.py  voices_tab.py
tts_webui_extension/bark/: BarkModelManager.py  BarkParams.py  FullGeneration.py  bark_config.py  bark_tab.py  create_voice_string.py  demo.py  extended_generate.py  generate_and_save_metadata.py  generate_random_seed.py  generation_settings.py  get_audio_from_npz.py  get_bark_voice_hash.py  get_speaker_gender.py  history_to_hash.py  main.py  npz_tools.py  settings_tab_bark.py  vocos_tab_bark.py
tts_webui_extension/bark/model_loader/: convert_model.py  loader.py
tts_webui_extension/bark/voices/: get_hash_memoized.py  get_npz_files_voices.py  voices_tab.py
