[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.bark"
version = "1.0.0"
description = "A Bark: A text-to-speech model extension for TTS Generation WebUI"
readme = "README.md"
authors = [{ name = "rsxdalv" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["tts-webui.bark"]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.bark"

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
